tests/NormalTests/paczka1/fuzzy1/92765666.err
Error in line 6: iGx2TG S704 93,3
Error in line 17: iGx2TG A721 34,9
Error in line 25: EYeZN S704 15,5
Error in line 26: maK A721 65,9
Error in line 32: iGx2TG S704 300,4
